force-app/main/default/objects/aos_Async_Process__c/aos_Async_Process__c.object-meta.xml
<CustomObject>
    <label>AOS Async Process</label>
    <nameField>
        <displayFormat>VAP-{000000000}</displayFormat>
        <label>Vertic Async Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AOS Async Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>