force-app/main/default/objects/aos_Async_Process__c/fields/aos_Attempts__c.field-meta.xml
<CustomField>
    <fullName>aos_Attempts__c</fullName>
    <label>Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>