force-app/main/default/objects/aos_Async_Process__c/fields/aos_Autorun__c.field-meta.xml
<CustomField>
    <fullName>aos_Autorun__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Autorun</label>
    <type>Checkbox</type>
</CustomField>