force-app/main/default/objects/aos_Async_Process__c/fields/aos_Description__c.field-meta.xml
<CustomField>
    <fullName>aos_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>