force-app/main/default/objects/aos_Async_Process__c/fields/aos_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Details__c</fullName>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>