force-app/main/default/objects/aos_Async_Process__c/fields/aos_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>aos_Group_Key__c</fullName>
    <label>Group Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>