force-app/main/default/objects/aos_Async_Process__c/fields/aos_Is_Queueable__c.field-meta.xml
<CustomField>
    <fullName>aos_Is_Queueable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Queueable</label>
    <type>Checkbox</type>
</CustomField>