force-app/main/default/objects/aos_Async_Process__c/fields/aos_Payload__c.field-meta.xml
<CustomField>
    <fullName>aos_Payload__c</fullName>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>