force-app/main/default/objects/aos_Async_Process__c/fields/aos_Priority__c.field-meta.xml
<CustomField>
    <fullName>aos_Priority__c</fullName>
    <description>Priority for processing order.</description>
    <inlineHelpText>Priority for processing order.</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>