force-app/main/default/objects/aos_Async_Process__c/fields/aos_Processor__c.field-meta.xml
<CustomField>
    <fullName>aos_Processor__c</fullName>
    <label>Processor</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>