force-app/main/default/objects/aos_Async_Process__c/fields/aos_Recurring_Donation__c.field-meta.xml
<CustomField>
    <fullName>aos_Recurring_Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RD to process by VAP</description>
    <label>Recurring Donation</label>
    <referenceTo>npe03__Recurring_Donation__c</referenceTo>
    <relationshipLabel>AOS Async Processes</relationshipLabel>
    <relationshipName>Async_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>