force-app/main/default/objects/aos_Async_Process__c/fields/aos_Remove__c.field-meta.xml
<CustomField>
    <fullName>aos_Remove__c</fullName>
    <formula>OR(AND(ISPICKVAL(aos_Status__c, &apos;Completed&apos;), ROUND(NOW() - LastModifiedDate, 0) &gt;= 14), AND(ISPICKVAL(aos_Status__c, &apos;Skipped&apos;), ROUND(NOW() - LastModifiedDate, 0) &gt;= 14))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remove</label>
    <type>Checkbox</type>
</CustomField>