force-app/main/default/objects/aos_Async_Process__c/fields/aos_Run_After__c.field-meta.xml
<CustomField>
    <fullName>aos_Run_After__c</fullName>
    <label>Run After</label>
    <type>DateTime</type>
</CustomField>