force-app/main/default/objects/aos_Async_Process__c/fields/aos_Status__c.field-meta.xml
<CustomField>
    <fullName>aos_Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>Retrying</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
                <isActive>false</isActive>
                <label>Processing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>