force-app/main/default/objects/aos_Async_Process__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>aos_Status__c</columns>
    <columns>aos_Run_After__c</columns>
    <columns>aos_Processor__c</columns>
    <columns>aos_Details__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Kanban</label>
</ListView>