force-app/main/default/objects/aos_Async_Process__c/listViews/aos_EziDebit.listView-meta.xml
<ListView>
    <fullName>aos_EziDebit</fullName>
    <columns>NAME</columns>
    <columns>aos_Details__c</columns>
    <columns>aos_Status__c</columns>
    <columns>aos_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aos_Processor__c</field>
        <operation>equals</operation>
        <value>EzidebitGetPaymentsScheduledBatch</value>
    </filters>
    <label>EziDebit</label>
</ListView>