force-app/main/default/objects/aos_Async_Process__c/listViews/EziDebit_VAPs.listView-meta.xml
<ListView>
    <fullName>EziDebit_VAPs</fullName>
    <columns>NAME</columns>
    <columns>aos_Details__c</columns>
    <columns>aos_Recurring_Donation__c</columns>
    <columns>aos_Status__c</columns>
    <columns>aos_Payload__c</columns>
    <columns>aos_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aos_Processor__c</field>
        <operation>equals</operation>
        <value>EzidebitGetPaymentsScheduledBatch</value>
    </filters>
    <label>EziDebit VAPs</label>
</ListView>